--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   math_expressions: ^2.3.1
+  flutter_launcher_icons: ^0.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
